// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-list Renders \`alarms-list\` with clear filter disabled props 1`] = `
<div
  class="alarms-list"
>
  <div
    class="layout wrap justify-space-between align-end alarms-list__toolbar mb-4"
  >
    <div
      class="flex"
    >
      <c-advanced-search-field-stub
        columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        combobox=""
        items="item 1,item 2"
        query="[object Object]"
        tooltip="<span>Help on the advanced research :</span>
<p>- [ NOT ] &lt;ColumnName&gt; &lt;Operator&gt; &lt;Value&gt;</p> [ AND|OR [ NOT ] &lt;ColumnName&gt; &lt;Operator&gt; &lt;Value&gt; ]
<p>The \\"-\\" before the research is required</p>
<p>Operators :
    <=, <,=, !=,>=, >, LIKE (For MongoDB regular expression)</p>
<p>Value's type : String between quote, Boolean (\\"TRUE\\", \\"FALSE\\"), Integer, Float, \\"NULL\\"</p>
<dl><dt>Examples :</dt><dt>- Connector = \\"connector_1\\"</dt>
    <dd>Alarms whose connectors are \\"connector_1\\"</dd><dt>- Connector=\\"connector_1\\" AND Resource=\\"resource_3\\"</dt>
    <dd>Alarms whose connectors is \\"connector_1\\" and the resources is \\"resource_3\\"</dd><dt>- Connector=\\"connector_1\\" OR Resource=\\"resource_3\\"</dt>
    <dd>Alarms whose connectors is \\"connector_1\\" or the resources is \\"resource_3\\"</dd><dt>- Connector LIKE 1 OR Connector LIKE 2</dt>
    <dd>Alarms whose connectors contains 1 or 2</dd><dt>- NOT Connector = \\"connector_1\\"</dt>
    <dd>Alarms whose connectors isn't \\"connector_1\\"</dd>
</dl>"
      />
    </div>
    <!---->
    <!---->
    <div
      class="flex"
    >
      <div
        class="layout align-end"
      >
        <filter-selector-stub
          disabled="true"
          filters=""
          hidedetails="true"
          itemtext="title"
          itemvalue="_id"
          label="Select a filter"
          lockedfilters=""
        />
        <!---->
      </div>
    </div>
    <!---->
    <div
      class="flex"
    >
      <alarms-list-remediation-instructions-filters-stub
        filters=""
        lockedfilters=""
      />
    </div>
    <div
      class="flex"
    >
      <span
        class="primary white--text v-chip v-chip--label v-chip--no-color v-chip--removable theme--light v-size--default"
      >
        <span
          class="v-chip__content"
        >
        Last 1 year
          <button
            aria-label="Close"
            class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
            style="font-size: 18px;"
            type="button"
          >
            cancel
          </button>
        </span>
      </span>
      <c-action-btn-stub
        color="primary"
        icon="schedule"
        tooltip="Set a custom date range"
      />
    </div>
    <!---->
  </div>
  <alarms-list-table-stub
    alarms="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    cellscontentbehavior="wrap"
    class="mt-2"
    columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    columnssettings="[object Object]"
    densable="true"
    dense="0"
    draggableclass="alarms-list-table__draggable-column"
    expandable="true"
    hidechildren="true"
    mincolumnwidth="10"
    options="[object Object]"
    refreshalarmslist="[Function]"
    resizingcolumnthrottledelay="10"
    search="search"
    selectable="true"
    selectedtag=""
    totalitems="10"
    widget="[object Object]"
  />
</div>
`;

exports[`alarms-list Renders \`alarms-list\` with default props 1`] = `
<div
  class="alarms-list"
>
  <div
    class="layout wrap justify-space-between align-end alarms-list__toolbar mb-4"
  >
    <div
      class="flex"
    >
      <c-advanced-search-field-stub
        columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        combobox=""
        items=""
        query="[object Object]"
        tooltip="<span>Help on the advanced research :</span>
<p>- [ NOT ] &lt;ColumnName&gt; &lt;Operator&gt; &lt;Value&gt;</p> [ AND|OR [ NOT ] &lt;ColumnName&gt; &lt;Operator&gt; &lt;Value&gt; ]
<p>The \\"-\\" before the research is required</p>
<p>Operators :
    <=, <,=, !=,>=, >, LIKE (For MongoDB regular expression)</p>
<p>Value's type : String between quote, Boolean (\\"TRUE\\", \\"FALSE\\"), Integer, Float, \\"NULL\\"</p>
<dl><dt>Examples :</dt><dt>- Connector = \\"connector_1\\"</dt>
    <dd>Alarms whose connectors are \\"connector_1\\"</dd><dt>- Connector=\\"connector_1\\" AND Resource=\\"resource_3\\"</dt>
    <dd>Alarms whose connectors is \\"connector_1\\" and the resources is \\"resource_3\\"</dd><dt>- Connector=\\"connector_1\\" OR Resource=\\"resource_3\\"</dt>
    <dd>Alarms whose connectors is \\"connector_1\\" or the resources is \\"resource_3\\"</dd><dt>- Connector LIKE 1 OR Connector LIKE 2</dt>
    <dd>Alarms whose connectors contains 1 or 2</dd><dt>- NOT Connector = \\"connector_1\\"</dt>
    <dd>Alarms whose connectors isn't \\"connector_1\\"</dd>
</dl>"
      />
    </div>
    <!---->
    <!---->
    <div
      class="flex"
    >
      <!---->
    </div>
    <!---->
    <div
      class="flex"
    >
      <alarms-list-remediation-instructions-filters-stub
        filters=""
        lockedfilters=""
      />
    </div>
    <div
      class="flex"
    >
      <span
        class="primary white--text v-chip v-chip--label v-chip--no-color v-chip--removable theme--light v-size--default"
      >
        <span
          class="v-chip__content"
        >
        Last 1 year
          <button
            aria-label="Close"
            class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
            style="font-size: 18px;"
            type="button"
          >
            cancel
          </button>
        </span>
      </span>
      <c-action-btn-stub
        color="primary"
        icon="schedule"
        tooltip="Set a custom date range"
      />
    </div>
    <!---->
  </div>
  <alarms-list-table-stub
    alarms="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    cellscontentbehavior="wrap"
    class="mt-2"
    columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    columnssettings="[object Object]"
    densable="true"
    dense="0"
    draggableclass="alarms-list-table__draggable-column"
    expandable="true"
    hidechildren="true"
    mincolumnwidth="10"
    options="[object Object]"
    refreshalarmslist="[Function]"
    resizingcolumnthrottledelay="10"
    search="search"
    selectable="true"
    selectedtag=""
    totalitems="10"
    widget="[object Object]"
  />
</div>
`;

exports[`alarms-list Renders \`alarms-list\` with default props and user filter permission and correlation and bookmark 1`] = `
<div
  class="alarms-list"
>
  <div
    class="layout wrap justify-space-between align-end alarms-list__toolbar mb-4"
  >
    <div
      class="flex"
    >
      <c-advanced-search-field-stub
        columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        combobox=""
        items=""
        query="[object Object]"
        tooltip="<span>Help on the advanced research :</span>
<p>- [ NOT ] &lt;ColumnName&gt; &lt;Operator&gt; &lt;Value&gt;</p> [ AND|OR [ NOT ] &lt;ColumnName&gt; &lt;Operator&gt; &lt;Value&gt; ]
<p>The \\"-\\" before the research is required</p>
<p>Operators :
    <=, <,=, !=,>=, >, LIKE (For MongoDB regular expression)</p>
<p>Value's type : String between quote, Boolean (\\"TRUE\\", \\"FALSE\\"), Integer, Float, \\"NULL\\"</p>
<dl><dt>Examples :</dt><dt>- Connector = \\"connector_1\\"</dt>
    <dd>Alarms whose connectors are \\"connector_1\\"</dd><dt>- Connector=\\"connector_1\\" AND Resource=\\"resource_3\\"</dt>
    <dd>Alarms whose connectors is \\"connector_1\\" and the resources is \\"resource_3\\"</dd><dt>- Connector=\\"connector_1\\" OR Resource=\\"resource_3\\"</dt>
    <dd>Alarms whose connectors is \\"connector_1\\" or the resources is \\"resource_3\\"</dd><dt>- Connector LIKE 1 OR Connector LIKE 2</dt>
    <dd>Alarms whose connectors contains 1 or 2</dd><dt>- NOT Connector = \\"connector_1\\"</dt>
    <dd>Alarms whose connectors isn't \\"connector_1\\"</dd>
</dl>"
      />
    </div>
    <!---->
    <div
      class="flex"
    >
      <v-switch-stub
        backgroundcolor=""
        class="mt-0"
        color="primary"
        errorcount="1"
        errormessages=""
        hidedetails="true"
        label="Correlation"
        messages=""
        ripple="true"
        rules=""
        successmessages=""
        valuecomparator="[Function]"
      />
    </div>
    <div
      class="flex"
    >
      <div
        class="layout align-end"
      >
        <filter-selector-stub
          clearable="true"
          disabled="true"
          filters=""
          hidedetails="true"
          itemtext="title"
          itemvalue="_id"
          label="Select a filter"
          lockedfilters=""
        />
        <!---->
      </div>
    </div>
    <div
      class="flex"
    >
      <v-switch-stub
        backgroundcolor=""
        class="mt-0"
        color="primary"
        errorcount="1"
        errormessages=""
        hidedetails="true"
        label="Filter by bookmark"
        messages=""
        ripple="true"
        rules=""
        successmessages=""
        valuecomparator="[Function]"
      />
    </div>
    <div
      class="flex"
    >
      <alarms-list-remediation-instructions-filters-stub
        filters=""
        lockedfilters=""
      />
    </div>
    <div
      class="flex"
    >
      <span
        class="primary white--text v-chip v-chip--label v-chip--no-color v-chip--removable theme--light v-size--default"
      >
        <span
          class="v-chip__content"
        >
        Last 1 year
          <button
            aria-label="Close"
            class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
            style="font-size: 18px;"
            type="button"
          >
            cancel
          </button>
        </span>
      </span>
      <c-action-btn-stub
        color="primary"
        icon="schedule"
        tooltip="Set a custom date range"
      />
    </div>
    <!---->
  </div>
  <alarms-list-table-stub
    alarms="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    cellscontentbehavior="wrap"
    class="mt-2"
    columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    columnssettings="[object Object]"
    densable="true"
    dense="0"
    draggableclass="alarms-list-table__draggable-column"
    expandable="true"
    hidechildren="true"
    mincolumnwidth="10"
    options="[object Object]"
    refreshalarmslist="[Function]"
    resizingcolumnthrottledelay="10"
    search="search"
    selectable="true"
    selectedtag=""
    totalitems="10"
    widget="[object Object]"
  />
</div>
`;
